--- a/ContinuumIB/ContinuumIB/ContinuumIB/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/ContinuumIB/ContinuumIB/ContinuumIB/Views/Storyboard/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -43,7 +44,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZuM-eo-GER">
-                                                    <rect key="frame" x="0.0" y="75" width="414" height="367"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="367"/>
                                                     <connections>
                                                         <segue destination="nIE-n1-TGL" kind="embed" identifier="toPhotoSelectorVC" id="Yuf-3X-zMa"/>
                                                     </connections>
@@ -377,6 +378,7 @@
                             <constraint firstItem="Mbc-VK-adl" firstAttribute="top" secondItem="LCL-lk-XGW" secondAttribute="top" id="lMt-be-qdE"/>
                             <constraint firstItem="Mbc-VK-adl" firstAttribute="leading" secondItem="LCL-lk-XGW" secondAttribute="leading" id="zyB-bE-qsh"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="B5D-CZ-k4s"/>
                     </view>
                     <connections>
                         <outlet property="photoImageView" destination="pbd-VX-Rhd" id="hII-tO-1Xi"/>
